Add 3d windowing for Conv2d layers. debug and completed dataset2nparray function. next step: implement models

--- a/Fall_Detection_System_v2.ipynb
+++ b/Fall_Detection_System_v2.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [
         "wXsG6DAmfm7m"
       ],
-      "authorship_tag": "ABX9TyPR4MvYnidSiH5RlRytYid8",
+      "authorship_tag": "ABX9TyMZ0prWxxJrP0EtJBfdolnL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,15 +41,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x4Hyqy-KZ3Eu",
-        "outputId": "fbf6f724-b52e-4aef-8ded-468908a14151"
+        "outputId": "7720a4ed-f463-41c3-f316-a32ae9b16d2a"
       },
-      "execution_count": 5,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
+            "Mounted at /content/gdrive\n"
           ]
         }
       ]
@@ -85,7 +85,7 @@
         "\n",
         "from sklearn.metrics import classification_report, confusion_matrix"
       ],
-      "execution_count": 6,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -107,7 +107,7 @@
         "# !unzip /content/gdrive/MyDrive/Datasets/SisFall_dataset.zip\n",
         "# !unzip /content/gdrive/MyDrive/Datasets/SisFall_enhanced.zip"
       ],
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -133,7 +133,7 @@
       "metadata": {
         "id": "Gi1u8eYf4VuO"
       },
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -163,7 +163,7 @@
       "metadata": {
         "id": "jDXCmXMKosSB"
       },
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -190,43 +190,8 @@
         "        allfiles.remove('desktop.ini')\n",
         "  return np.hstack(allfiles)"
       ],
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "ad = get_file_name('/content/gdrive/MyDrive/Datasets/SisFall_dataset/')\n",
-        "ad.sort()\n",
-        "ad"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "AkKiW5vZ7MJ4",
-        "outputId": "f3d6e461-1cbc-4460-f5ae-38fb8fe5593c"
-      },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array(['/content/gdrive/MyDrive/Datasets/SisFall_dataset/SA01/D01_SA01_R01.txt',\n",
-              "       '/content/gdrive/MyDrive/Datasets/SisFall_dataset/SA01/D02_SA01_R01.txt',\n",
-              "       '/content/gdrive/MyDrive/Datasets/SisFall_dataset/SA01/D03_SA01_R01.txt',\n",
-              "       ...,\n",
-              "       '/content/gdrive/MyDrive/Datasets/SisFall_dataset/SE15/D17_SE15_R03.txt',\n",
-              "       '/content/gdrive/MyDrive/Datasets/SisFall_dataset/SE15/D17_SE15_R04.txt',\n",
-              "       '/content/gdrive/MyDrive/Datasets/SisFall_dataset/SE15/D17_SE15_R05.txt'],\n",
-              "      dtype='<U70')"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 11
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -253,9 +218,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IKd3zdJC7Oiq",
-        "outputId": "2edd5ac7-595c-4f37-f8d9-4d3e3a8c1fe0"
+        "outputId": "e7c1c0da-98be-45c0-9ef1-6a1341623b6d"
       },
-      "execution_count": 24,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -265,7 +230,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 7
         }
       ]
     },
@@ -339,18 +304,30 @@
         "      # print(len(feature), first_index)\n",
         "      result[first_index : (first_index+len(feature))] = feature\n",
         "      first_index += len(feature)\n",
-        "    return result\n",
+        "    \n",
+        "    return result[result.sum(axis=1) != 0]\n",
         "  \n",
-        "  def windowing(self, dataset, window_size):\n",
+        "  def windowing2d(self, dataset, window_size):\n",
         "    window = window_size * (dataset.shape[1]-1)\n",
         "    cut = dataset.shape[0] % window_size\n",
         "    feature = dataset[:-cut,0:-1]\n",
         "    label = dataset[:-cut,-1]\n",
-        "    # feature = feature.ravel().reshape(feature.size//window,window)\n",
-        "    # label = label.reshape(label.size// window_size, window_size)\n",
-        "    # label = label.sum(axis=1)\n",
-        "    # label[label > 0] = 1\n",
+        "    feature = feature.ravel().reshape(feature.size//window,window)\n",
+        "    label = label.reshape(label.size// window_size, window_size)\n",
+        "    label = label.sum(axis=1)\n",
+        "    label[label > 0] = 1\n",
         "    return feature, label\n",
+        "\n",
+        "    def windowing3d(self, dataset, window_size):\n",
+        "      n_windows = len(dataset) // window_size\n",
+        "      cut = dataset.shape[0] % window_size\n",
+        "      feature = dataset[:-cut,0:-1]\n",
+        "      label = dataset[:-cut,-1]\n",
+        "      feature = feature.reshape(n_windows, window_size, dataset.shape[1]-1)\n",
+        "      label = label.reshape(n_windows, window_size, 1)\n",
+        "      label = label.sum(axis=1)\n",
+        "      label[label > 0] = 1\n",
+        "      return feature, label\n",
         "\n",
         "  def dataset_to_tensor(self, window_size, dataset, saving_path):\n",
         "    features, labels = self.windowing(self.datasets_to_nparray(dataset), window_size)\n",
@@ -371,7 +348,7 @@
       "metadata": {
         "id": "Rh4rp7_Z_i0q"
       },
-      "execution_count": 25,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -381,13 +358,149 @@
         "ad = get_file_name('/content/gdrive/MyDrive/Datasets/SisFall_dataset/')\n",
         "ad.sort()\n",
         "dp = DatasetProcessor()\n",
-        "result = dp.datasets_to_nparray(ad)\n"
+        "result = dp.datasets_to_nparray(ad[:10])\n"
       ],
       "metadata": {
-        "id": "_1pcZKGXL-OM"
+        "id": "_1pcZKGXL-OM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f9e2eaeb-636e-4046-9eee-e3b0b2f8a8fe"
       },
-      "execution_count": null,
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CPU times: user 1.11 s, sys: 39.1 ms, total: 1.15 s\n",
+            "Wall time: 1.96 s\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.datasets import cifar10\n",
+        "(input_train, target_train), (input_test, target_test) = cifar10.load_data()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "87jELxB0sKab",
+        "outputId": "46f01423-f4d3-456a-a877-92c4fc615067"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
+            "170498071/170498071 [==============================] - 2s 0us/step\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "target_train.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vRAcbtCRsPHT",
+        "outputId": "941f0ac0-187a-4c97-ccf3-2eb6fc163138"
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(50000, 1)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = result"
+      ],
+      "metadata": {
+        "id": "ElpndUIVminu"
+      },
+      "execution_count": 39,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y = x[:109800]\n",
+        "y_label = y[:,-1]\n",
+        "y_feature = y[:,:-1]\n",
+        "y_feature = y_feature.reshape(549,200,9)\n",
+        "y_label = y_label.reshape(549,200,1)\n",
+        "y_label = y_label.sum(axis=1)\n",
+        "y_label[y_label > 0] = 1\n",
+        "y_label.shape\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E7PGl87YkCir",
+        "outputId": "c8689499-ebe6-401b-9555-8491196be6ed"
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(549, 1)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 75
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_feature[0].shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ti5w4bwKq3L2",
+        "outputId": "c6d66dc3-91c2-48be-c95b-eae42133ed7a"
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(200, 9)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 78
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -397,7 +510,7 @@
       "metadata": {
         "id": "ZsgOQmQNTYK8"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -414,7 +527,7 @@
         "id": "LbLQnBw0X-MV",
         "outputId": "415c16b1-03db-4f26-eee3-26f5d8c3c27e"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
