There's a small bugs in class weight. the total time for preprocessing is about 22 mintues.

--- a/Fall_Detection_System_v2.ipynb
+++ b/Fall_Detection_System_v2.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [
         "wXsG6DAmfm7m"
       ],
-      "authorship_tag": "ABX9TyMZ0prWxxJrP0EtJBfdolnL",
+      "authorship_tag": "ABX9TyPA+u+qRd42EtPvOlWTjMFN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,15 +41,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x4Hyqy-KZ3Eu",
-        "outputId": "7720a4ed-f463-41c3-f316-a32ae9b16d2a"
+        "outputId": "243b9332-1444-4c6d-eb74-6a7df9551edf"
       },
-      "execution_count": 1,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/gdrive\n"
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
           ]
         }
       ]
@@ -85,7 +85,7 @@
         "\n",
         "from sklearn.metrics import classification_report, confusion_matrix"
       ],
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -107,7 +107,7 @@
         "# !unzip /content/gdrive/MyDrive/Datasets/SisFall_dataset.zip\n",
         "# !unzip /content/gdrive/MyDrive/Datasets/SisFall_enhanced.zip"
       ],
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -133,7 +133,7 @@
       "metadata": {
         "id": "Gi1u8eYf4VuO"
       },
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -163,7 +163,7 @@
       "metadata": {
         "id": "jDXCmXMKosSB"
       },
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -190,7 +190,7 @@
         "        allfiles.remove('desktop.ini')\n",
         "  return np.hstack(allfiles)"
       ],
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -218,9 +218,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IKd3zdJC7Oiq",
-        "outputId": "e7c1c0da-98be-45c0-9ef1-6a1341623b6d"
+        "outputId": "3296b863-d7fe-4e96-a959-5afa695b2753"
       },
-      "execution_count": 7,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -230,7 +230,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 10
         }
       ]
     },
@@ -307,7 +307,7 @@
         "    \n",
         "    return result[result.sum(axis=1) != 0]\n",
         "  \n",
-        "  def windowing2d(self, dataset, window_size):\n",
+        "  def windowing2d(self, dataset, window_size=200):\n",
         "    window = window_size * (dataset.shape[1]-1)\n",
         "    cut = dataset.shape[0] % window_size\n",
         "    feature = dataset[:-cut,0:-1]\n",
@@ -318,16 +318,16 @@
         "    label[label > 0] = 1\n",
         "    return feature, label\n",
         "\n",
-        "    def windowing3d(self, dataset, window_size):\n",
-        "      n_windows = len(dataset) // window_size\n",
-        "      cut = dataset.shape[0] % window_size\n",
-        "      feature = dataset[:-cut,0:-1]\n",
-        "      label = dataset[:-cut,-1]\n",
-        "      feature = feature.reshape(n_windows, window_size, dataset.shape[1]-1)\n",
-        "      label = label.reshape(n_windows, window_size, 1)\n",
-        "      label = label.sum(axis=1)\n",
-        "      label[label > 0] = 1\n",
-        "      return feature, label\n",
+        "  def windowing3d(self, dataset, window_size=200):\n",
+        "    n_windows = len(dataset) // window_size\n",
+        "    cut = dataset.shape[0] % window_size\n",
+        "    feature = dataset[:-cut,0:-1]\n",
+        "    label = dataset[:-cut,-1]\n",
+        "    feature = feature.reshape(n_windows, window_size, dataset.shape[1]-1)\n",
+        "    label = label.reshape(n_windows, window_size, 1)\n",
+        "    label = label.sum(axis=1)\n",
+        "    label[label > 0] = 1\n",
+        "    return feature, label\n",
         "\n",
         "  def dataset_to_tensor(self, window_size, dataset, saving_path):\n",
         "    features, labels = self.windowing(self.datasets_to_nparray(dataset), window_size)\n",
@@ -343,12 +343,12 @@
         "      return pd.concat([positive, negative], ignore_index=True).sample(frac=1).reset_index(drop=True)\n",
         "  \n",
         "  def generate_class_weight(self, label):\n",
-        "    return class_weight.compute_class_weight('balanced', np.unique(label), label)"
+        "    return class_weight.compute_class_weight(class_weight='balanced', classes=np.unique(label), y=label)"
       ],
       "metadata": {
         "id": "Rh4rp7_Z_i0q"
       },
-      "execution_count": 33,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -365,16 +365,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f9e2eaeb-636e-4046-9eee-e3b0b2f8a8fe"
+        "outputId": "c183205d-bfc1-4d81-b784-075c69da2691"
       },
-      "execution_count": 34,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 1.11 s, sys: 39.1 ms, total: 1.15 s\n",
-            "Wall time: 1.96 s\n"
+            "CPU times: user 1.11 s, sys: 975 ms, total: 2.08 s\n",
+            "Wall time: 2.74 s\n"
           ]
         }
       ]
@@ -382,181 +382,102 @@
     {
       "cell_type": "code",
       "source": [
-        "from tensorflow.keras.datasets import cifar10\n",
-        "(input_train, target_train), (input_test, target_test) = cifar10.load_data()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "87jELxB0sKab",
-        "outputId": "46f01423-f4d3-456a-a877-92c4fc615067"
-      },
-      "execution_count": 55,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
-            "170498071/170498071 [==============================] - 2s 0us/step\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "target_train.shape"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "vRAcbtCRsPHT",
-        "outputId": "941f0ac0-187a-4c97-ccf3-2eb6fc163138"
-      },
-      "execution_count": 59,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(50000, 1)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 59
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "x = result"
-      ],
-      "metadata": {
-        "id": "ElpndUIVminu"
-      },
-      "execution_count": 39,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "y = x[:109800]\n",
-        "y_label = y[:,-1]\n",
-        "y_feature = y[:,:-1]\n",
-        "y_feature = y_feature.reshape(549,200,9)\n",
-        "y_label = y_label.reshape(549,200,1)\n",
-        "y_label = y_label.sum(axis=1)\n",
-        "y_label[y_label > 0] = 1\n",
-        "y_label.shape\n",
-        "\n",
-        "\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "E7PGl87YkCir",
-        "outputId": "c8689499-ebe6-401b-9555-8491196be6ed"
-      },
-      "execution_count": 75,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(549, 1)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 75
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "y_feature[0].shape"
+        "%%time\n",
+        "feature2, label2 = dp.windowing2d(result)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ti5w4bwKq3L2",
-        "outputId": "c6d66dc3-91c2-48be-c95b-eae42133ed7a"
+        "outputId": "ee78fedb-c8d5-4b5b-b8e0-5a6a99e6e56b"
       },
-      "execution_count": 78,
+      "execution_count": 13,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(200, 9)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 78
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CPU times: user 2.53 ms, sys: 1.15 ms, total: 3.69 ms\n",
+            "Wall time: 6.88 ms\n"
+          ]
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "feature, label = dp.windowing(result, window_size=200)"
-      ],
-      "metadata": {
-        "id": "ZsgOQmQNTYK8"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "result = np.zeros((20, 10), int)\n",
-        "result[16:18] = np.array([[1,2,3,4,5,6,7,8,9,10],[11,12,13,14,15,16,17,18,19,20]])\n",
-        "result"
+        "feature2.shape, label2.shape"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "LbLQnBw0X-MV",
-        "outputId": "415c16b1-03db-4f26-eee3-26f5d8c3c27e"
+        "id": "e7HiwCNyirf4",
+        "outputId": "56ef18ec-e449-4270-db25-14ddb9ac23e3"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-              "       [ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10],\n",
-              "       [11, 12, 13, 14, 15, 16, 17, 18, 19, 20],\n",
-              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0]])"
+              "((549, 1800), (549,))"
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%time\n",
+        "feature, label = dp.windowing3d(result)"
+      ],
+      "metadata": {
+        "id": "ZsgOQmQNTYK8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c275a15c-76bb-498f-fea5-13ed7b9c6d69"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CPU times: user 984 µs, sys: 0 ns, total: 984 µs\n",
+            "Wall time: 643 µs\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "feature.shape, label.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gt_GyhJIi69H",
+        "outputId": "dbcc90b2-7f99-4ae8-e3aa-ff3ad46f4af7"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((549, 200, 9), (549, 1))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
         }
       ]
     },
