Pre-processing almost completed. next step : implement models and evaluate performance.

--- a/Fall_Detection_System_v2.ipynb
+++ b/Fall_Detection_System_v2.ipynb
@@ -4,10 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [
-        "wXsG6DAmfm7m"
-      ],
-      "authorship_tag": "ABX9TyPA+u+qRd42EtPvOlWTjMFN",
+      "authorship_tag": "ABX9TyO4ihF9TCi+X/0wmi4QJUX+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,9 +38,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x4Hyqy-KZ3Eu",
-        "outputId": "243b9332-1444-4c6d-eb74-6a7df9551edf"
+        "outputId": "24ff7d18-5d69-461f-ca8a-ea94eef2f30e"
       },
-      "execution_count": 4,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,10 +79,11 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sn\n",
         "sn.set()\n",
-        "\n",
-        "from sklearn.metrics import classification_report, confusion_matrix"
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import classification_report, confusion_matrix\n",
+        "from sklearn.preprocessing import StandardScaler"
       ],
-      "execution_count": 5,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -107,7 +105,7 @@
         "# !unzip /content/gdrive/MyDrive/Datasets/SisFall_dataset.zip\n",
         "# !unzip /content/gdrive/MyDrive/Datasets/SisFall_enhanced.zip"
       ],
-      "execution_count": 6,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -133,7 +131,7 @@
       "metadata": {
         "id": "Gi1u8eYf4VuO"
       },
-      "execution_count": 7,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -163,7 +161,7 @@
       "metadata": {
         "id": "jDXCmXMKosSB"
       },
-      "execution_count": 8,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -190,7 +188,7 @@
         "        allfiles.remove('desktop.ini')\n",
         "  return np.hstack(allfiles)"
       ],
-      "execution_count": 9,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -218,9 +216,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IKd3zdJC7Oiq",
-        "outputId": "3296b863-d7fe-4e96-a959-5afa695b2753"
+        "outputId": "ee19dde5-3e50-49c3-9da3-dc340454834f"
       },
-      "execution_count": 10,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -230,7 +228,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 22
         }
       ]
     },
@@ -265,7 +263,6 @@
         "    return data\n",
         "\n",
         "  def merge_features(self, data_path, flag=True):\n",
-        "    ''' Feature Extraction should be changed.'''\n",
         "\n",
         "    dataset = self.read_data(data_path)\n",
         "    \n",
@@ -329,6 +326,22 @@
         "    label[label > 0] = 1\n",
         "    return feature, label\n",
         "\n",
+        "  def split_dataset(self, feature, label, test_ratio=0.2, validation=True, validation_ratio=0.2):\n",
+        "    X_train, X_test, y_train, y_test = train_test_split(feature, label, test_size=test_ratio, shuffle=True, stratify=label)\n",
+        "    \n",
+        "    if validation:\n",
+        "      X_train, X_validation, y_train, y_validation = train_test_split(X_train, y_train, test_size=validation_ratio, shuffle=True, stratify=y_train)\n",
+        "      return X_train, X_test, X_validation, y_train, y_test, y_validation\n",
+        "    \n",
+        "    else:\n",
+        "      return X_train, X_test, y_train, y_test\n",
+        "\n",
+        "  def normalizer(self, scaler, X_train, X_test, X_validation):\n",
+        "    X_train = scaler.fit_transform(X_train)\n",
+        "    X_test = scaler.transform(X_test)\n",
+        "    X_validation = scaler.transform(X_validation)\n",
+        "    return X_train, X_test, X_validation\n",
+        "    \n",
         "  def dataset_to_tensor(self, window_size, dataset, saving_path):\n",
         "    features, labels = self.windowing(self.datasets_to_nparray(dataset), window_size)\n",
         "    return np.savez(saving_path, inputs=features, targets=labels)\n",
@@ -348,7 +361,7 @@
       "metadata": {
         "id": "Rh4rp7_Z_i0q"
       },
-      "execution_count": 11,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -358,23 +371,23 @@
         "ad = get_file_name('/content/gdrive/MyDrive/Datasets/SisFall_dataset/')\n",
         "ad.sort()\n",
         "dp = DatasetProcessor()\n",
-        "result = dp.datasets_to_nparray(ad[:10])\n"
+        "result = dp.datasets_to_nparray(ad[:50])\n"
       ],
       "metadata": {
         "id": "_1pcZKGXL-OM",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c183205d-bfc1-4d81-b784-075c69da2691"
+        "outputId": "efe049a9-58d7-48b6-f362-ecb9d1cfa116"
       },
-      "execution_count": 12,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 1.11 s, sys: 975 ms, total: 2.08 s\n",
-            "Wall time: 2.74 s\n"
+            "CPU times: user 2.07 s, sys: 417 ms, total: 2.49 s\n",
+            "Wall time: 3.38 s\n"
           ]
         }
       ]
@@ -383,50 +396,62 @@
       "cell_type": "code",
       "source": [
         "%%time\n",
-        "feature2, label2 = dp.windowing2d(result)"
+        "feature, label = dp.windowing2d(result)\n",
+        "feature.shape, label.shape"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ti5w4bwKq3L2",
-        "outputId": "ee78fedb-c8d5-4b5b-b8e0-5a6a99e6e56b"
+        "outputId": "a11922ec-86e7-4088-fd19-747f9bb734e4"
       },
-      "execution_count": 13,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 2.53 ms, sys: 1.15 ms, total: 3.69 ms\n",
-            "Wall time: 6.88 ms\n"
+            "CPU times: user 6.65 ms, sys: 0 ns, total: 6.65 ms\n",
+            "Wall time: 13.7 ms\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((1081, 1800), (1081,))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "feature2.shape, label2.shape"
+        "weight = dp.generate_class_weight(label)\n",
+        "weight"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "e7HiwCNyirf4",
-        "outputId": "56ef18ec-e449-4270-db25-14ddb9ac23e3"
+        "outputId": "f8d055c6-573e-47db-f7bb-e6fcae2af0cf"
       },
-      "execution_count": 14,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "((549, 1800), (549,))"
+              "array([1.])"
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 26
         }
       ]
     },
@@ -434,23 +459,70 @@
       "cell_type": "code",
       "source": [
         "%%time\n",
-        "feature, label = dp.windowing3d(result)"
+        "X_train, X_test, X_validation, y_train, y_test, y_validation = dp.split_dataset(feature, label)\n",
+        "X_train.shape, X_test.shape, X_validation.shape, y_train.shape, y_test.shape, y_validation.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ToIP2dfWfTGj",
+        "outputId": "ec95e42e-f331-4369-9c95-dd659f38a174"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CPU times: user 6.59 ms, sys: 971 µs, total: 7.56 ms\n",
+            "Wall time: 12.6 ms\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((691, 1800), (217, 1800), (173, 1800), (691,), (217,), (173,))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train, X_test, X_validation = dp.normalizer(StandardScaler(), X_train, X_test, X_validation)"
+      ],
+      "metadata": {
+        "id": "KGBaG0mqfTD3"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%time\n",
+        "# feature, label = dp.windowing3d(result)"
       ],
       "metadata": {
         "id": "ZsgOQmQNTYK8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c275a15c-76bb-498f-fea5-13ed7b9c6d69"
+        "outputId": "9cec51d6-1c74-4b21-f324-ccc6012e0e64"
       },
-      "execution_count": 15,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 984 µs, sys: 0 ns, total: 984 µs\n",
-            "Wall time: 643 µs\n"
+            "CPU times: user 5 µs, sys: 0 ns, total: 5 µs\n",
+            "Wall time: 9.3 µs\n"
           ]
         }
       ]
@@ -458,7 +530,7 @@
     {
       "cell_type": "code",
       "source": [
-        "feature.shape, label.shape"
+        "# feature.shape, label.shape"
       ],
       "metadata": {
         "colab": {
@@ -467,7 +539,7 @@
         "id": "gt_GyhJIi69H",
         "outputId": "dbcc90b2-7f99-4ae8-e3aa-ff3ad46f4af7"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
